@@ -1,14 +1,22 @@
 
-module glint_enmabal
+module glimmer_enmabal
 
-  !*FD The energy and mass-balance model
+  !*FD The energy and mass-balance model (dummy only at the moment)
 
 contains
 
-	subroutine enmabal
+	subroutine enmabal_init
+
+    !*FD Dummy subroutine (initialisation)
+
+  end subroutine enmabal_init
+
+  !-------------------------------------
+
+ 	subroutine enmabal
 
     !*FD Dummy subroutine
 
   end subroutine enmabal
 
-end module glint_enmabal
+end module glimmer_enmabal
